--- a/src/app/mainscreen/message/message-edit/message-edit.component.html
+++ b/src/app/mainscreen/message/message-edit/message-edit.component.html
@@ -22,7 +22,7 @@
 
     </div>
     <textarea cdkTextareaAutosize #messageCreate class="msg-write-container" [(ngModel)]="_message.content"
-        *ngIf="channelFirebaseService.selectedChannel"  (click)="closeEmojiBar()">
+        *ngIf="channelService.selectedChannel"  (click)="closeEmojiBar()">
     </textarea>
     
 </div>
