--- a/src/app/mainscreen/sidenav/chat-view/chat-view.component.html
+++ b/src/app/mainscreen/sidenav/chat-view/chat-view.component.html
@@ -11,6 +11,6 @@
     </div>
     <div id="header-user-name">
         <b>{{user.fullName}}</b>
-        <b *ngIf="user.id == userFirebaseService.currentUser.id">&nbsp;(Du)</b>
+        <b *ngIf="user.id == userService.currentUser.id">&nbsp;(Du)</b>
     </div>
 </div>
