--- a/src/app/mainscreen/message/toolbar/toolbar.component.html
+++ b/src/app/mainscreen/message/toolbar/toolbar.component.html
@@ -4,26 +4,66 @@
 
 <mat-toolbar class="toolbar">
     <mat-toolbar-row>
-        <img src="assets/img/icons/checkmark.svg" (click)="handleEmojiSelection('✅')">
-        <img src="assets/img/icons/handsup.svg" (click)="handleEmojiSelection('🙌')">
-
-        <img src="assets/img/icons/addreactionplus.svg" (click)="toggleReactions($event)">
-        <img 
-            *ngIf="message && messageLocation=='channel'" 
-            src="assets/img/icons/answer.svg" 
-            (click)="threadService.openThread(message)">
-
+        <div class="toolbar-icon">
+            <img src="assets/img/icons/checkmark.svg" (click)="handleEmojiSelection('✅')">
+        </div>
+        <div class="toolbar-icon">
+            <img src="assets/img/icons/handsup.svg" (click)="handleEmojiSelection('🙌')">
+        </div>
+        <div class="toolbar-icon">
+            <svg id="addreaction-icon" width="40" height="40" viewBox="-8 -8 40 40" fill="none"
+                xmlns="http://www.w3.org/2000/svg" (click)="toggleReactions($event)">
+                <g id="sentiment_satisfied">
+                    <mask id="mask0_813_12145" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="24"
+                        height="24">
+                        <rect id="Bounding box" width="24" height="24" fill="#D9D9D9" />
+                    </mask>
+                    <g mask="url(#mask0_813_12145)">
+                        <path id="sentiment_satisfied_2"
+                            d="M15.5 11C15.9333 11 16.2917 10.8583 16.575 10.575C16.8583 10.2917 17 9.93333 17 9.5C17 9.06667 16.8583 8.70833 16.575 8.425C16.2917 8.14167 15.9333 8 15.5 8C15.0667 8 14.7083 8.14167 14.425 8.425C14.1417 8.70833 14 9.06667 14 9.5C14 9.93333 14.1417 10.2917 14.425 10.575C14.7083 10.8583 15.0667 11 15.5 11ZM8.5 11C8.93333 11 9.29167 10.8583 9.575 10.575C9.85833 10.2917 10 9.93333 10 9.5C10 9.06667 9.85833 8.70833 9.575 8.425C9.29167 8.14167 8.93333 8 8.5 8C8.06667 8 7.70833 8.14167 7.425 8.425C7.14167 8.70833 7 9.06667 7 9.5C7 9.93333 7.14167 10.2917 7.425 10.575C7.70833 10.8583 8.06667 11 8.5 11ZM12 17.5C12.95 17.5 13.8167 17.2877 14.6 16.863C15.3833 16.4377 15.9917 15.9 16.425 15.25C16.625 14.95 16.6543 14.6667 16.513 14.4C16.371 14.1333 16.15 14 15.85 14C15.7333 14 15.6167 14.0333 15.5 14.1C15.3833 14.1667 15.2917 14.25 15.225 14.35C14.8583 14.85 14.4 15.25 13.85 15.55C13.3 15.85 12.6833 16 12 16C11.3167 16 10.7 15.85 10.15 15.55C9.6 15.25 9.14167 14.85 8.775 14.35C8.70833 14.25 8.61267 14.1667 8.488 14.1C8.36267 14.0333 8.24167 14 8.125 14C7.84167 14 7.62933 14.129 7.488 14.387C7.346 14.6457 7.36667 14.9167 7.55 15.2C8 15.8833 8.61667 16.4377 9.4 16.863C10.1833 17.2877 11.05 17.5 12 17.5ZM12 22C10.6167 22 9.31667 21.7373 8.1 21.212C6.88333 20.6873 5.825 19.975 4.925 19.075C4.025 18.175 3.31267 17.1167 2.788 15.9C2.26267 14.6833 2 13.3833 2 12C2 10.6167 2.26267 9.31667 2.788 8.1C3.31267 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.31233 8.1 2.787C9.31667 2.26233 10.6167 2 12 2C13.3833 2 14.6833 2.26233 15.9 2.787C17.1167 3.31233 18.175 4.025 19.075 4.925C19.975 5.825 20.6873 6.88333 21.212 8.1C21.7373 9.31667 22 10.6167 22 12C22 13.3833 21.7373 14.6833 21.212 15.9C20.6873 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6873 15.9 21.212C14.6833 21.7373 13.3833 22 12 22ZM12 20C14.2167 20 16.1043 19.221 17.663 17.663C19.221 16.1043 20 14.2167 20 12C20 9.78333 19.221 7.89567 17.663 6.337C16.1043 4.779 14.2167 4 12 4C9.78333 4 7.896 4.779 6.338 6.337C4.77933 7.89567 4 9.78333 4 12C4 14.2167 4.77933 16.1043 6.338 17.663C7.896 19.221 9.78333 20 12 20Z"
+                            fill="black" />
+                    </g>
+                </g>
+            </svg>
+        </div>
+        <div class="toolbar-icon">
+            <svg id="answer-icon" *ngIf="message && messageLocation=='channel'" width="41" height="40"
+                viewBox="0 0 41 40" fill="none" xmlns="http://www.w3.org/2000/svg"
+                (click)="threadService.openThread(message)">
+                <mask id="mask0_15968_1769" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="8" y="8" width="25"
+                    height="24">
+                    <rect x="8.43652" y="8" width="24" height="24" fill="#D9D9D9" />
+                </mask>
+                <g mask="url(#mask0_15968_1769)">
+                    <path
+                        d="M15.4365 22H25.4365C25.7199 22 25.9572 21.904 26.1485 21.712C26.3405 21.5207 26.4365 21.2833 26.4365 21C26.4365 20.7167 26.3405 20.479 26.1485 20.287C25.9572 20.0957 25.7199 20 25.4365 20H15.4365C15.1532 20 14.9155 20.0957 14.7235 20.287C14.5322 20.479 14.4365 20.7167 14.4365 21C14.4365 21.2833 14.5322 21.5207 14.7235 21.712C14.9155 21.904 15.1532 22 15.4365 22ZM15.4365 19H25.4365C25.7199 19 25.9572 18.904 26.1485 18.712C26.3405 18.5207 26.4365 18.2833 26.4365 18C26.4365 17.7167 26.3405 17.479 26.1485 17.287C25.9572 17.0957 25.7199 17 25.4365 17H15.4365C15.1532 17 14.9155 17.0957 14.7235 17.287C14.5322 17.479 14.4365 17.7167 14.4365 18C14.4365 18.2833 14.5322 18.5207 14.7235 18.712C14.9155 18.904 15.1532 19 15.4365 19ZM15.4365 16H25.4365C25.7199 16 25.9572 15.9043 26.1485 15.713C26.3405 15.521 26.4365 15.2833 26.4365 15C26.4365 14.7167 26.3405 14.479 26.1485 14.287C25.9572 14.0957 25.7199 14 25.4365 14H15.4365C15.1532 14 14.9155 14.0957 14.7235 14.287C14.5322 14.479 14.4365 14.7167 14.4365 15C14.4365 15.2833 14.5322 15.521 14.7235 15.713C14.9155 15.9043 15.1532 16 15.4365 16ZM28.7365 28.3L26.4365 26H12.4365C11.8865 26 11.4159 25.8043 11.0245 25.413C10.6325 25.021 10.4365 24.55 10.4365 24V12C10.4365 11.45 10.6325 10.979 11.0245 10.587C11.4159 10.1957 11.8865 10 12.4365 10H28.4365C28.9865 10 29.4575 10.1957 29.8495 10.587C30.2409 10.979 30.4365 11.45 30.4365 12V27.575C30.4365 28.025 30.2325 28.3373 29.8245 28.512C29.4159 28.6873 29.0532 28.6167 28.7365 28.3ZM12.4365 12V24H27.2615L28.4365 25.175V12H12.4365Z"
+                        fill="black" />
+                </g>
+            </svg>
+        </div>
         <div *ngIf="isOwnMessage" (blur)="hideOptions($event)" class="message-edit-container">
-            <button mat-icon-button (click)="toggleOptions($event)">
-                <mat-icon>more_vert</mat-icon>
-            </button>
+            <div class="toolbar-icon">
+                <svg id="more-vert-icon" width="40" height="40" viewBox="-8 -8 40 40" fill="none"
+                    xmlns="http://www.w3.org/2000/svg" (click)="toggleOptions($event)">
+                    <g id="more_vert">
+                        <mask id="mask0_1823_21676" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0"
+                            width="24" height="24">
+                            <rect id="Bounding box" width="24" height="24" fill="#D9D9D9" />
+                        </mask>
+                        <g mask="url(#mask0_1823_21676)">
+                            <path id="more_vert_2"
+                                d="M12 20C11.45 20 10.9792 19.8042 10.5875 19.4125C10.1958 19.0208 10 18.55 10 18C10 17.45 10.1958 16.9792 10.5875 16.5875C10.9792 16.1958 11.45 16 12 16C12.55 16 13.0208 16.1958 13.4125 16.5875C13.8042 16.9792 14 17.45 14 18C14 18.55 13.8042 19.0208 13.4125 19.4125C13.0208 19.8042 12.55 20 12 20ZM12 14C11.45 14 10.9792 13.8042 10.5875 13.4125C10.1958 13.0208 10 12.55 10 12C10 11.45 10.1958 10.9792 10.5875 10.5875C10.9792 10.1958 11.45 10 12 10C12.55 10 13.0208 10.1958 13.4125 10.5875C13.8042 10.9792 14 11.45 14 12C14 12.55 13.8042 13.0208 13.4125 13.4125C13.0208 13.8042 12.55 14 12 14ZM12 8C11.45 8 10.9792 7.80417 10.5875 7.4125C10.1958 7.02083 10 6.55 10 6C10 5.45 10.1958 4.97917 10.5875 4.5875C10.9792 4.19583 11.45 4 12 4C12.55 4 13.0208 4.19583 13.4125 4.5875C13.8042 4.97917 14 5.45 14 6C14 6.55 13.8042 7.02083 13.4125 7.4125C13.0208 7.80417 12.55 8 12 8Z"
+                                fill="#1C1B1F" />
+                        </g>
+                    </g>
+                </svg>
+            </div>
         </div>
     </mat-toolbar-row>
 </mat-toolbar>
 
 <div *ngIf="showMessageOptions" class="message-edit-options">
     <button (click)="handleMessageEdit()">
-        <mat-icon>edit</mat-icon>
-        <span >Nachricht bearbeiten</span>
+        <span>Nachricht bearbeiten</span>
     </button>
 </div>
