--- a/src/app/mainscreen/message/toolbar/toolbar.component.scss
+++ b/src/app/mainscreen/message/toolbar/toolbar.component.scss
@@ -1,8 +1,27 @@
 mat-toolbar {
     background-color: white;
-    border: solid 1px #9747FF;
+    border: solid 1px rgba(173, 176, 217, 1);
     border-radius: 25px 25px 25px 0px;
     z-index: 99;
+    gap: 5px
+}
+
+.toolbar-icon {
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+
+    &:hover {
+        background-color: rgba(236, 238, 254, 1);
+        border-radius: 30px;
+
+        #addreaction-icon path,
+        #more-vert-icon path,
+        #answer-icon path {
+            fill: #535AF1; 
+        }
+    }
 }
 
 
@@ -14,6 +33,7 @@ mat-toolbar {
     width: 100%;
     left: 90%;
     top: 35px;
+    box-shadow: 0px 6px 14px 0px rgba(0, 0, 0, 0.20);
 
     button {
         cursor: pointer;
@@ -26,11 +46,14 @@ mat-toolbar {
         margin: 8px;
         border: none;
         padding: 8px;
-
+        justify-content: center;
+        font-size: 16px;
+        font-weight: bold;
+        
         &:hover {
             background-color: #ECEEFE;
             font-weight: 600;
-            color: #797EF3
+            color: rgba(83, 90, 241, 1)
         }
     }
 }
