--- a/src/styles.scss
+++ b/src/styles.scss
@@ -260,6 +260,8 @@ button{
         padding: 25px;
         border: none;
         color: white;
+        margin-left: 8px;
+        margin-right: 8px;
     }
 }
   
