--- a/src/app/mainscreen/message/message.component.scss
+++ b/src/app/mainscreen/message/message.component.scss
@@ -86,6 +86,9 @@
             }
 
             .answers-link {
+                display: flex;
+                align-items: center;
+                gap: 16px;
                 color: #535AF1;
                 margin: 0 5px 0 5px;
             }
