CSS Channel components, startscreen mobile,

--- a/src/app/mainscreen/channel/edit-channel-users/edit-channel-users.component.scss
+++ b/src/app/mainscreen/channel/edit-channel-users/edit-channel-users.component.scss
@@ -63,7 +63,8 @@
     #editChannel{
         max-width: unset;
         min-width: unset;
-        width: calc(100vw - 24px);
-        right: 0px;
+        width: calc(100vw - 72px);
+        right: 24px;
+        left: 24px;
     }
 }
