--- a/src/app/mainscreen/channel/channel.component.scss
+++ b/src/app/mainscreen/channel/channel.component.scss
@@ -107,6 +107,14 @@
     cursor: pointer;
 }
 
+#addmember-icon {
+    cursor: pointer;
+}
+
+#addmember-icon:hover path {
+    fill: #535AF1;
+}
+
 .header {
     padding: 0px 35px 0px 35px;
     display: flex;
