--- a/src/app/action-handler/action-handler.component.html
+++ b/src/app/action-handler/action-handler.component.html
@@ -1,2 +1,4 @@
-<h1>{{userMessage}}</h1>
-<h3>Sie werden in kürze weitergeleitet</h3>
+<div id="actionHandler">
+    <h1>{{userMessage}}</h1>
+    <h3>Sie werden in kürze weitergeleitet</h3>
+</div>
