--- a/src/app/mainscreen/channel/edit-channel-users/edit-channel-users.component.html
+++ b/src/app/mainscreen/channel/edit-channel-users/edit-channel-users.component.html
@@ -2,7 +2,7 @@
     <div id="editChannelHeader">
         <div>
             <h2>Leute hinzufügen</h2>
-            <h4>#{{formatService.cutStrLen(channelCopy.channelName)}}</h4>
+            <h4>#{{getFormatedString(channelCopy.channelName)}}</h4>
         </div>
         <div class="closeIcon-container" (click)="close()">
             <svg id="closeIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" alt="close">
