add style in channel.dialog

--- a/src/app/add-channel-dialog/add-channel-dialog.component.scss
+++ b/src/app/add-channel-dialog/add-channel-dialog.component.scss
@@ -88,6 +88,7 @@ mat-form-field {
     border: 0px;
     width: 126px;
     height: 58px;
+    font-size: 18px;
     border-radius: 29px;
     background-color: #444DF2;
     display: flex;
