--- a/src/app/mainscreen/header/header.component.scss
+++ b/src/app/mainscreen/header/header.component.scss
@@ -276,15 +276,23 @@ $headerDropdownPositionRigth: 0px;
             width: 100vw;
             background-color: white;
             border-radius: 30px 30px 0px 0px;
+            z-index: 10;
 
             .headerMenu-mobile-entry {
                 display: flex;
                 align-items: center;
                 gap: 12px;
             }
-
-
         }
+        #headerMenu-mobile-background{
+            position: fixed;
+            width: 100vw;
+            height: 100vh;
+            top: 0px; 
+            left: 0px;
+            z-index: 9;
+          }
+
     }
 }
 
