--- a/src/app/mainscreen/searchbar/searchbar.component.scss
+++ b/src/app/mainscreen/searchbar/searchbar.component.scss
@@ -9,7 +9,7 @@
         padding: 0px 0px 0px 24px;
 
         height: 60px;
-        width: calc(100% - 24px);
+        width: calc(100% - 48px);
         font-size: 20px;
         display: flex;
 
@@ -22,7 +22,7 @@
         position: absolute;
         top: 18px;
         height: 24px;
-        right: 18px;
+        right: 36px;
         width: 35px;
     }
 
@@ -45,7 +45,7 @@
 }
 
 
-
+/*
 .sideNavMobile {
 
     .testcontainer {
@@ -66,6 +66,7 @@
         width: 24px !important;
     }
 }
+*/
 
 .channelOption {
     border: solid 1px #ADB0D9;
