updated Notification "konto created", "password reset"

--- a/src/app/mainscreen/channel/add-user-dialog/add-user-dialog.component.html
+++ b/src/app/mainscreen/channel/add-user-dialog/add-user-dialog.component.html
@@ -12,9 +12,9 @@
         <app-searchbar *ngIf="selectedOption == '2'" 
             [types]="'users'" 
             [action]='channel'
-            [setStyle]="'channelOption'" 
-
-            (updatedChannelModel)="handleChannelUserUpdate($event)"></app-searchbar>
+            [setStyle]="'channelOption'"
+            (updatedChannelModel)="handleChannelUserUpdate($event)">
+        </app-searchbar>
     </mat-radio-group>
 
     <div class="addUserToSelectionContainer">
