--- a/src/app/mainscreen/channel/channel.component.scss
+++ b/src/app/mainscreen/channel/channel.component.scss
@@ -436,6 +436,8 @@ app-message-create {
 @media only screen and (max-width: 1000px) {
 
     .header {
+        flex-direction: column;
+        align-items: center;
         h2 {
             font-size: 20px !important;
         }
