Messages can be deleted; Update Toolbar function

--- a/src/app/mainscreen/message/toolbar/toolbar.component.html
+++ b/src/app/mainscreen/message/toolbar/toolbar.component.html
@@ -54,5 +54,9 @@
 <div *ngIf="showMessageOptions" class="message-edit-options">
     <button (click)="handleMessageEdit()">
         <span>Nachricht bearbeiten</span>
+        
+    </button>
+    <button (click)="handleMessageDelete()">
+        <span>Nachricht löschen</span>
     </button>
 </div>
