--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -2,7 +2,9 @@
     (mouseenter)="openToolbar()">
     <app-toolbar *ngIf="showToolbar" [isOwnMessage]="isOwnMessage" [message]="_message"
         [messageLocation]="messageLocation" (emojiSelectedOutput)="handleEmojiSelection($event)"
-        (editMessageOutput)="handleMessageEdit($event)">
+        (editMessageOutput)="handleMessageEdit($event)"
+        (deleteMessageOutput)="handleMessageDelete()"
+        >
     </app-toolbar>
     <img src="{{ autorAvatar }}" class="message-img" *ngIf="autorAvatar">
     <div class="message-content" tabindex="0">
@@ -45,7 +47,7 @@
         <div class='message-footer'>
             <div class="answers-details"
                 *ngIf="this.messageService.loadedAnswers.length > 0 && messageLocation == 'channel'"
-                (click)="threadFirebaseService.openThread(_message)">
+                (click)="threadService.openThread(_message)">
                 
                 <div *ngIf="this.messageService.loadedAnswers.length == 1" class="answers-link">
                   {{ this.messageService.loadedAnswers.length }} Antwort
