--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -10,7 +10,7 @@
     <div class="message-content" tabindex="0">
         <div class="message-head">
             <div *ngIf="autorName!=''"><b class="message-username" (click)="openUserProfil()">{{ autorName }}</b></div>
-            <div class="message-timestamp"> {{ getTimestamp(_message.timestamp) }} Uhr</div>
+            <div class="message-timestamp"> {{ formatService.formatTimestampToHHMM(_message.timestamp) }} Uhr</div>
         </div>
 
         <mat-card *ngIf="!editMessage">
