--- a/src/app/startscreen/privacy-policy/privacy-policy.component.html
+++ b/src/app/startscreen/privacy-policy/privacy-policy.component.html
@@ -1,4 +1,5 @@
 <mat-card class="privacy-container">
+ 
   <a (click)="closePrivacyPolicy()" class="user-uper-icon-title" href="/">
     <img src="./assets/img/icons/arrow_left_back.svg" />
   </a>
@@ -399,7 +400,7 @@
       href="https://www.dataprivacyframework.gov/s/participant-search/participant-detail?contact=true&id=a2zt000000001L5AAI&status=Active"
       target="_blank"
       rel="noopener noreferrer"
-      >https://www.dataprivacyframework.gov/s/participant-search/participant-detail?contact=true&id=a2zt000000001L5AAI&status=Active</a
+      >Link</a
     >
   </p>
   <p>Quelle: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a></p>
