--- a/src/app/startscreen/startscreen.component.scss
+++ b/src/app/startscreen/startscreen.component.scss
@@ -3,9 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  justify-content: space-between;
-  height: 100vh;
-
+ 
   h3 {
     margin: 0;
   }
@@ -21,7 +19,6 @@
     &:hover {
       border: 1px solid rgba(173, 176, 217, 1);
       border-radius: 100px;
-      
     }
   }
 }
@@ -30,11 +27,11 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
-  align-content: space-between;
   align-items: center;
   padding-top: 75px;
   padding-bottom: 11px;
 }
+
 
 #startScreen-logo {
   display: flex;
@@ -70,7 +67,7 @@
   #startScreen-container{
     display: flex;
     justify-content: center;
-    height: unset;
+    
   }
 
   #startScreen-register-mobile{
@@ -79,7 +76,6 @@
     flex-direction: column;
     margin-top: 30px;
     gap: 20px;
-    padding-bottom: 88px;
     font-size: 18px;
 
     a {
@@ -93,6 +89,13 @@
       font-weight: bold;
       color: rgba(68, 77, 242, 1);
     }
+  }
+
+  #startScreen-imprint-mobile{
+    display: flex;
+    gap: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 
   .uper-startscreen-container {
