--- a/src/app/mainscreen/empty-window/empty-window.component.scss
+++ b/src/app/mainscreen/empty-window/empty-window.component.scss
@@ -55,6 +55,7 @@
                 img {
                     height: 70px;
                     aspect-ratio: 1;
+                    object-fit: cover;
                     border-radius: 50%;
                 }
             }
