--- a/src/app/startscreen/startscreen.component.scss
+++ b/src/app/startscreen/startscreen.component.scss
@@ -57,6 +57,15 @@
   padding-bottom: 48px;
 }
 
+app-intro {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
 
 @media screen and (max-width: 640px) {
 
