--- a/src/app/mainscreen/channel/add-user-dialog/add-user-dialog.component.html
+++ b/src/app/mainscreen/channel/add-user-dialog/add-user-dialog.component.html
@@ -5,7 +5,7 @@
         <img (click)="closeDialog()" class="close" src="/assets/img/icons/close.svg">
     </div>
 
-    <mat-radio-group class="radioButtonContainer" [(ngModel)]="selectedOption" (ngModelChange)="chooseSelection()">
+    <mat-radio-group class="radioButtonContainer" [(ngModel)]="selectedOption">
         <mat-radio-button value="1">Alle Mitglieder von ... hinzufügen</mat-radio-button>
         <mat-radio-button value="2">Bestimmte Leute hinzufügen</mat-radio-button>
         <!-- <input *ngIf="selectedOption == '2'" class="addUserToChannelDialogInput"> -->
