updated startscreen animation

--- a/src/app/startscreen/startscreen.component.html
+++ b/src/app/startscreen/startscreen.component.html
@@ -1,5 +1,5 @@
 <app-intro (introComplete)="handleIntroComplete($event)"></app-intro>
-<div id="startScreen-container" *ngIf="introComplete">
+<div id="startScreen-container">
     <div class="uper-startscreen-container">
         <div id="startScreen-logo">
             <img src="assets/img/logo/logo.svg" alt="logo">
