--- a/src/app/startscreen/startscreen.component.scss
+++ b/src/app/startscreen/startscreen.component.scss
@@ -58,12 +58,12 @@
 }
 
 app-intro {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
+  z-index:10;
   width: 100%;
   height: 100vh;
-  overflow: hidden;
 }
 
 
